syntax = "proto3";
option go_package = "./ProtoMessage;ProtoMessage";
option csharp_namespace = "ProtoMessage"; 
package ProtoMessage;

////////////////////////////////////////////////////////////////
//
//  Error
//
////////////////////////////////////////////////////////////////

enum Error {
    None = 0;
    UserNameExist = 1;
}

////////////////////////////////////////////////////////////////
//
//  Data Basic
//
////////////////////////////////////////////////////////////////

enum RESULT {
    SUCCESS = 0;
    FAILED = 1;
}

message PUser {
    int64 uid = 1;
    repeated PCharacter characters = 2;
}

message PCharacter {
    int32 id = 1;

}

////////////////////////////////////////////////////////////////
//
//  Messages
//
////////////////////////////////////////////////////////////////
message NetMessage {
    NetMessageRequest request = 1;
    NetMessageResponse response = 2;
}

message NetMessageRequest{
    RegisterRequest Register = 1;
}

message NetMessageResponse{
    RegisterResponse Register = 1;
}

message RegisterRequest {
    string userName = 1;
    string passward = 2;
}
message RegisterResponse {
    RESULT result = 1;
    Error error  = 2;
}

message LoginRequest {
    string userName = 1;
    string passward = 2;
}

message LoginResponse {
    RESULT  result = 1;
    Error error = 2;
}